src/objects/SMS__c.object
<CustomObject>
    <description>holds records of SMS messages</description>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <formula>&apos;Hi &apos; &amp; To_Contact__r.FirstName &amp; &apos;, &apos; &amp; Outgoing_Message__c &amp; &apos;### &apos; &amp; To_Contact__c &amp; &apos;# &apos; &amp; To_Contact__r.Email &amp; &apos;#&apos; &amp; To_Contact__r.MobilePhone &amp; &apos;#&apos; &amp; To_Contact__r.FirstName &amp; &apos; &apos; &amp;  To_Contact__r.LastName &amp; &apos;#&apos; &amp; $Label.Org_Short_Name &amp; &apos;#&apos;</formula>
        <inlineHelpText>this is the message that will be sent to the SMS server</inlineHelpText>
        <label>EmailTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Message__c</fullName>
        <label>Incoming Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Message Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Message Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outgoing_Message__c</fullName>
        <label>Outgoing Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who the message was to</inlineHelpText>
        <label>To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>To_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Outgoing_Message__c</columns>
        <columns>Incoming_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_My_Messages</fullName>
        <columns>NAME</columns>
        <columns>To_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Outgoing_Message__c</columns>
        <columns>Incoming_Message__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Messages</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>